--- a/03_smilga_next_js_tutorial/package.json
+++ b/03_smilga_next_js_tutorial/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.11.0",
     "@tailwindcss/typography": "^0.5.10",
     "next": "14.1.4",
     "react": "^18",
@@ -18,6 +19,7 @@
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.7.3",
     "postcss": "^8",
+    "prisma": "^5.11.0",
     "tailwindcss": "^3.3.0"
   }
 }
