--- a/03_smilga_next_js_tutorial/package.json
+++ b/03_smilga_next_js_tutorial/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/typography": "^0.5.10",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
